[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/Tilesets/TanksDemoFloorTileSet.png" type="Texture" id=1]
[ext_resource path="res://Assets/Tilesets/TanksDemoTSGrass.png" type="Texture" id=2]
[ext_resource path="res://Assets/Styles/Orbitron-Black.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/Scenes/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Styles/Orbitron-Bold.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Assets/Scenes/Root.gd" type="Script" id=6]
[ext_resource path="res://Assets/Styles/Theme.tres" type="Theme" id=7]
[ext_resource path="res://Assets/Scenes/PauseMenu.gd" type="Script" id=8]
[ext_resource path="res://Assets/Tilesets/TileSetGrassMap.tres" type="TileSet" id=9]

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 0, 0, 256, 0, 256, 256, 0, 256 )

[sub_resource type="TileSet" id=4]
0/name = "TanksDemoFloorTileSet.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 3072, 1024 )
0/tile_mode = 1
0/autotile/bitmask_mode = 1
0/autotile/bitmask_flags = [ Vector2( 0, 0 ), 144, Vector2( 0, 1 ), 146, Vector2( 0, 2 ), 18, Vector2( 0, 3 ), 16, Vector2( 1, 0 ), 176, Vector2( 1, 1 ), 178, Vector2( 1, 2 ), 50, Vector2( 1, 3 ), 48, Vector2( 2, 0 ), 184, Vector2( 2, 1 ), 186, Vector2( 2, 2 ), 58, Vector2( 2, 3 ), 56, Vector2( 3, 0 ), 152, Vector2( 3, 1 ), 154, Vector2( 3, 2 ), 26, Vector2( 3, 3 ), 24, Vector2( 4, 0 ), 187, Vector2( 4, 1 ), 434, Vector2( 4, 2 ), 182, Vector2( 4, 3 ), 250, Vector2( 5, 0 ), 440, Vector2( 5, 1 ), 510, Vector2( 5, 2 ), 447, Vector2( 5, 3 ), 62, Vector2( 6, 0 ), 248, Vector2( 6, 1 ), 507, Vector2( 6, 2 ), 255, Vector2( 6, 3 ), 59, Vector2( 7, 0 ), 190, Vector2( 7, 1 ), 218, Vector2( 7, 2 ), 155, Vector2( 7, 3 ), 442, Vector2( 8, 0 ), 432, Vector2( 8, 1 ), 438, Vector2( 8, 2 ), 446, Vector2( 8, 3 ), 54, Vector2( 9, 0 ), 506, Vector2( 9, 1 ), 254, Vector2( 9, 2 ), 511, Vector2( 9, 3 ), 63, Vector2( 10, 0 ), 504, Vector2( 10, 2 ), 443, Vector2( 10, 3 ), 191, Vector2( 11, 0 ), 216, Vector2( 11, 1 ), 251, Vector2( 11, 2 ), 219, Vector2( 11, 3 ), 27 ]
0/autotile/icon_coordinate = Vector2( 9, 2 )
0/autotile/tile_size = Vector2( 256, 256 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "TanksDemoTSGrass.png 1"
1/texture = ExtResource( 2 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 256, 256 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 5 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 3 )

[node name="Node" type="Node"]
script = ExtResource( 6 )
PlayerScene = ExtResource( 4 )

[node name="Border" type="TileMap" parent="."]
tile_set = SubResource( 4 )
cell_size = Vector2( 256, 256 )
format = 1
tile_data = PoolIntArray( -1, 1, 0, -65536, 1, 0, -65535, 1, 0, -65534, 1, 0, -65533, 1, 0, -65532, 1, 0, -65531, 1, 0, -65530, 1, 0, -65529, 1, 0, -65528, 1, 0, -65527, 1, 0, -65526, 1, 0, -65525, 1, 0, -65524, 1, 0, -65523, 1, 0, 65535, 1, 0, 13, 1, 0, 131071, 1, 0, 65549, 1, 0, 196607, 1, 0, 131085, 1, 0, 262143, 1, 0, 196621, 1, 0, 327679, 1, 0, 262157, 1, 0, 393215, 1, 0, 327693, 1, 0, 458751, 1, 0, 393229, 1, 0, 524287, 1, 0, 458765, 1, 0, 589823, 1, 0, 524301, 1, 0, 655359, 1, 0, 589824, 1, 0, 589825, 1, 0, 589826, 1, 0, 589827, 1, 0, 589828, 1, 0, 589829, 1, 0, 589830, 1, 0, 589831, 1, 0, 589832, 1, 0, 589833, 1, 0, 589834, 1, 0, 589835, 1, 0, 589836, 1, 0, 589837, 1, 0 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 9 )
cell_size = Vector2( 256, 256 )
format = 1
tile_data = PoolIntArray( 0, 0, 8, 1, 0, 10, 2, 0, 10, 3, 0, 11, 4, 1, 0, 5, 0, 8, 6, 0, 11, 7, 1, 0, 8, 1, 0, 9, 1, 0, 10, 0, 0, 11, 1, 0, 12, 1, 0, 65536, 0, 196616, 65537, 0, 196617, 65538, 0, 196617, 65539, 0, 196619, 65540, 1, 0, 65541, 0, 196616, 65542, 0, 196614, 65543, 0, 3, 65544, 1, 0, 65545, 0, 8, 65546, 0, 196612, 65547, 0, 196611, 65548, 1, 0, 131072, 1, 0, 131073, 1, 0, 131074, 1, 0, 131075, 1, 0, 131076, 1, 0, 131077, 1, 0, 131078, 1, 0, 131079, 0, 131072, 131080, 1, 0, 131081, 0, 131076, 131082, 0, 196619, 131083, 1, 0, 131084, 1, 0, 196608, 1, 0, 196609, 1, 0, 196610, 1, 0, 196611, 0, 0, 196612, 1, 0, 196613, 1, 0, 196614, 1, 0, 196615, 1, 0, 196616, 1, 0, 196617, 0, 65536, 196618, 1, 0, 196619, 1, 0, 196620, 1, 0, 262144, 1, 0, 262145, 1, 0, 262146, 1, 0, 262147, 0, 65536, 262148, 1, 0, 262149, 1, 0, 262150, 0, 8, 262151, 0, 10, 262152, 0, 10, 262153, 0, 65543, 262154, 1, 0, 262155, 1, 0, 262156, 1, 0, 327680, 1, 0, 327681, 0, 196609, 327682, 0, 196610, 327683, 0, 65539, 327684, 1, 0, 327685, 1, 0, 327686, 0, 65544, 327687, 0, 131081, 327688, 0, 131078, 327689, 0, 196619, 327690, 1, 0, 327691, 1, 0, 327692, 1, 0, 393216, 1, 0, 393217, 1, 0, 393218, 1, 0, 393219, 0, 65536, 393220, 1, 0, 393221, 1, 0, 393222, 0, 65544, 393223, 0, 131081, 393224, 0, 131083, 393225, 1, 0, 393226, 1, 0, 393227, 1, 0, 393228, 1, 0, 458752, 1, 0, 458753, 1, 0, 458754, 1, 0, 458755, 0, 65536, 458756, 1, 0, 458757, 1, 0, 458758, 0, 196616, 458759, 0, 196617, 458760, 0, 196619, 458761, 1, 0, 458762, 1, 0, 458763, 1, 0, 458764, 1, 0, 524288, 1, 0, 524289, 1, 0, 524290, 1, 0, 524291, 0, 131072, 524292, 1, 0, 524293, 1, 0, 524294, 1, 0, 524295, 1, 0, 524296, 1, 0, 524297, 1, 0, 524298, 1, 0, 524299, 1, 0, 524300, 1, 0 )

[node name="Menus" type="CanvasLayer" parent="."]
layer = 10

[node name="MainMenu" type="Control" parent="Menus"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Menus/MainMenu"]
margin_right = 1280.0
margin_bottom = 720.0
rect_min_size = Vector2( 1280, 720 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Menus/MainMenu/HBoxContainer"]
margin_left = 490.0
margin_right = 790.0
margin_bottom = 720.0
custom_constants/separation = 50
alignment = 1

[node name="Title" type="RichTextLabel" parent="Menus/MainMenu/HBoxContainer/VBoxContainer"]
margin_top = 160.0
margin_right = 300.0
margin_bottom = 260.0
rect_min_size = Vector2( 300, 100 )
custom_fonts/normal_font = SubResource( 3 )
text = "Godot Tanks Demo"

[node name="Play" type="Button" parent="Menus/MainMenu/HBoxContainer/VBoxContainer"]
margin_top = 310.0
margin_right = 300.0
margin_bottom = 410.0
rect_min_size = Vector2( 300, 100 )
custom_fonts/font = SubResource( 2 )
text = "PLAY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="Menus/MainMenu/HBoxContainer/VBoxContainer"]
margin_top = 460.0
margin_right = 300.0
margin_bottom = 560.0
rect_min_size = Vector2( 300, 100 )
custom_constants/hseparation = 50
custom_fonts/font = SubResource( 2 )
text = "EXIT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseMenu" type="Control" parent="Menus"]
pause_mode = 2
visible = false
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Menus/PauseMenu"]
margin_right = 1280.0
margin_bottom = 720.0
rect_min_size = Vector2( 1280, 720 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Menus/PauseMenu/HBoxContainer"]
margin_left = 490.0
margin_right = 790.0
margin_bottom = 720.0
custom_constants/separation = 50
alignment = 1

[node name="Resume" type="Button" parent="Menus/PauseMenu/HBoxContainer/VBoxContainer"]
margin_top = 235.0
margin_right = 300.0
margin_bottom = 335.0
rect_min_size = Vector2( 300, 100 )
custom_fonts/font = SubResource( 2 )
text = "RESUME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="Button" parent="Menus/PauseMenu/HBoxContainer/VBoxContainer"]
margin_top = 385.0
margin_right = 300.0
margin_bottom = 485.0
rect_min_size = Vector2( 300, 100 )
custom_constants/hseparation = 50
custom_fonts/font = SubResource( 2 )
text = "MENU"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InGame" type="Control" parent="Menus"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pause" type="Button" parent="Menus/InGame"]
margin_left = 1.0
margin_top = 2.0
margin_right = 164.0
margin_bottom = 80.0
theme = ExtResource( 7 )
text = "Pause"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Menus/MainMenu/HBoxContainer/VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Menus/PauseMenu/HBoxContainer/VBoxContainer/Resume" to="Menus/PauseMenu" method="_on_Resume_pressed"]
[connection signal="pressed" from="Menus/InGame/Pause" to="." method="_on_Pause_pressed"]
